# lua-taglib

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
.github/workflows/: test-build.yml
cmake/modules/: FindTagLib.cmake  SourceCompileDefinitions.cmake
csrc/: audioproperties.cpp  audioproperties.h  fileref.cpp  fileref.h  tag.cpp  tag.h  taglib.cpp  taglib.h  tbytevector.cpp  tbytevector.h  tbytevectorlist.cpp  tbytevectorlist.h  tbytevectorstream.cpp  tbytevectorstream.h  tfile.cpp  tfile.h  tfilestream.cpp  tfilestream.h  tiostream.cpp  tiostream.h  tlist.h  tmap.h  tpicture.h  tpropertymap.cpp  tpropertymap.h  tstring.cpp  tstring.h  tstringlist.cpp  tstringlist.h  tvariant.cpp  tvariant.h  tversionnumber.cpp  tversionnumber.h  version.c  version.h
csrc/ape/: ape.cpp  ape.h  apefile.cpp  apefile.h  apefooter.cpp  apefooter.h  apeitem.cpp  apeitem.h  apeproperties.cpp  apeproperties.h  apetag.cpp  apetag.h
csrc/asf/: asf.cpp  asf.h  asfattribute.cpp  asfattribute.h  asffile.cpp  asffile.h  asfpicture.cpp  asfpicture.h  asfproperties.cpp  asfproperties.h  asftag.cpp  asftag.h
csrc/dsdiff/: dsdiff.cpp  dsdiff.h  dsdifffile.cpp  dsdifffile.h  dsdiffproperties.cpp  dsdiffproperties.h
csrc/dsdiff/diin/: dsdiffdiin.cpp  dsdiffdiin.h  dsdiffdiintag.cpp  dsdiffdiintag.h
csrc/dsf/: dsf.cpp  dsf.h  dsffile.cpp  dsffile.h  dsfproperties.cpp  dsfproperties.h
csrc/flac/: flac.cpp  flac.h  flacfile.cpp  flacfile.h  flacmetadatablock.cpp  flacmetadatablock.h  flacpicture.cpp  flacpicture.h  flacproperties.cpp  flacproperties.h
csrc/id3v1/: id3v1.cpp  id3v1.h  id3v1tag.cpp  id3v1tag.h
csrc/id3v2/: attachedpictureframe.cpp  attachedpictureframe.h  chapterframe.cpp  chapterframe.h  commentsframe.cpp  commentsframe.h  eventtimingcodesframe.cpp  eventtimingcodesframe.h  generalencapsulatedobjectframe.cpp  generalencapsulatedobjectframe.h  id3v2.cpp  id3v2.h  id3v2extendedheader.cpp  id3v2extendedheader.h  id3v2footer.cpp  id3v2footer.h  id3v2frame.cpp  id3v2frame.h  id3v2header.cpp  id3v2header.h  id3v2tag.cpp  id3v2tag.h  ownershipframe.cpp  ownershipframe.h  podcastframe.cpp  podcastframe.h  popularimeterframe.cpp  popularimeterframe.h  privateframe.cpp  privateframe.h  relativevolumeframe.cpp  relativevolumeframe.h  synchronizedlyricsframe.cpp  synchronizedlyricsframe.h  tableofcontentsframe.cpp  tableofcontentsframe.h  textidentificationframe.cpp  textidentificationframe.h  uniquefileidentifierframe.cpp  uniquefileidentifierframe.h  (+6 more)
csrc/it/: it.cpp  it.h  itfile.cpp  itfile.h  itproperties.cpp  itproperties.h
csrc/lua/: compat.cpp  compat.h  lstring.cpp  lstring.h  meta.cpp  meta.h
csrc/matroska/: matroska.cpp  matroska.h  matroskaattachedfile.cpp  matroskaattachedfile.h  matroskaattachments.cpp  matroskaattachments.h  matroskachapter.cpp  matroskachapter.h  matroskachapteredition.cpp  matroskachapteredition.h  matroskachapters.cpp  matroskachapters.h  matroskafile.cpp  matroskafile.h  matroskaproperties.cpp  matroskaproperties.h  matroskasimpletag.cpp  matroskasimpletag.h  matroskatag.cpp  matroskatag.h
csrc/mod/: mod.cpp  mod.h  modfile.cpp  modfile.h  modfilebase.cpp  modfilebase.h  modproperties.cpp  modproperties.h  modtag.cpp  modtag.h
csrc/mp4/: mp4.cpp  mp4.h  mp4coverart.cpp  mp4coverart.h  mp4file.cpp  mp4file.h  mp4item.cpp  mp4item.h  mp4properties.cpp  mp4properties.h  mp4tag.cpp  mp4tag.h
csrc/mpc/: mpc.cpp  mpc.h  mpcfile.cpp  mpcfile.h  mpcproperties.cpp  mpcproperties.h
csrc/mpeg/: mpeg.cpp  mpeg.h  mpegfile.cpp  mpegfile.h  mpegheader.cpp  mpegheader.h  mpegproperties.cpp  mpegproperties.h  xingheader.cpp  xingheader.h
csrc/ogg/: ogg.cpp  ogg.h  oggfile.cpp  oggfile.h  oggpage.cpp  oggpage.h  oggpageheader.cpp  oggpageheader.h  xiphcomment.cpp  xiphcomment.h
csrc/ogg/flac/: oggflac.cpp  oggflac.h  oggflacfile.cpp  oggflacfile.h
csrc/ogg/opus/: opus.cpp  opus.h  opusfile.cpp  opusfile.h  opusproperties.cpp  opusproperties.h
csrc/ogg/speex/: speex.cpp  speex.h  speexfile.cpp  speexfile.h  speexproperties.cpp  speexproperties.h
csrc/ogg/vorbis/: vorbis.cpp  vorbis.h  vorbisfile.cpp  vorbisfile.h  vorbisproperties.cpp  vorbisproperties.h
csrc/riff/: riff.cpp  riff.h
csrc/riff/aiff/: aiff.cpp  aiff.h  aifffile.cpp  aifffile.h  aiffproperties.cpp  aiffproperties.h
csrc/riff/info/: info.cpp  info.h  infotag.cpp  infotag.h
csrc/riff/wav/: wav.cpp  wav.h  wavfile.cpp  wavfile.h  wavproperties.cpp  wavproperties.h
csrc/s3m/: s3m.cpp  s3m.h  s3mfile.cpp  s3mfile.h  s3mproperties.cpp  s3mproperties.h
csrc/shared/: attrs.h  enum.h  enum.tcc  integer.cpp  integer.h  lua.h  userdata.cpp  userdata.h  userdata.tcc
csrc/shorten/: shorten.cpp  shorten.h  shortenfile.cpp  shortenfile.h  shortenproperties.cpp  shortenproperties.h  shortentag.cpp  shortentag.h
csrc/trueaudio/: trueaudio.cpp  trueaudio.h  trueaudiofile.cpp  trueaudiofile.h  trueaudioproperties.cpp  trueaudioproperties.h
csrc/vorbis/: vorbis.cpp  vorbis.h
csrc/wavpack/: wavpack.cpp  wavpack.h  wavpackfile.cpp  wavpackfile.h  wavpackproperties.cpp  wavpackproperties.h
csrc/xm/: xm.cpp  xm.h  xmfile.cpp  xmfile.h  xmproperties.cpp  xmproperties.h
examples/: file-iostream.lua
rockspec/: taglib-dev-1.rockspec  taglib-template.rockspec
testsuite/: install-taglib.pl
testsuite/patches/: taglib-1.0.patch  taglib-1.2.patch  taglib-1.3.1.patch  taglib-1.4.patch
