cmake_minimum_required(VERSION 3.11)
project(lua-taglib LANGUAGES C CXX)

list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake/modules")

include(CheckIPOSupported)
check_ipo_supported(RESULT LTO_SUPPORTED)

if(LUA_VERSION)
  find_package(Lua ${LUA_VERSION} EXACT REQUIRED)
else()
  find_package(Lua REQUIRED)
  set(LUA_VERSION "${LUA_VERSION_MAJOR}.${LUA_VERSION_MINOR}" CACHE STRING "Lua version to use")
endif()

find_package(TagLib REQUIRED)

if(NOT DEFINED CMODULE_INSTALL_DIR)
    set(CMODULE_INSTALL_DIR "${CMAKE_INSTALL_PREFIX}/lib/lua/${LUA_VERSION}")
endif()

set(luataglib_sources)
list(APPEND luataglib_sources "csrc/version.c")
list(APPEND luataglib_sources "csrc/lua/compat.cpp")
list(APPEND luataglib_sources "csrc/lua/meta.cpp")
list(APPEND luataglib_sources "csrc/lua/lstring.cpp")
list(APPEND luataglib_sources "csrc/shared/integer.cpp")
list(APPEND luataglib_sources "csrc/shared/userdata.cpp")
list(APPEND luataglib_sources "csrc/audioproperties.cpp")
list(APPEND luataglib_sources "csrc/fileref.cpp")
list(APPEND luataglib_sources "csrc/tag.cpp")
list(APPEND luataglib_sources "csrc/taglib.cpp")
list(APPEND luataglib_sources "csrc/tbytevector.cpp")
list(APPEND luataglib_sources "csrc/tbytevectorlist.cpp")
list(APPEND luataglib_sources "csrc/tbytevectorstream.cpp")
list(APPEND luataglib_sources "csrc/tfile.cpp")
list(APPEND luataglib_sources "csrc/tfilestream.cpp")
list(APPEND luataglib_sources "csrc/tiostream.cpp")
list(APPEND luataglib_sources "csrc/tpropertymap.cpp")
list(APPEND luataglib_sources "csrc/tstring.cpp")
list(APPEND luataglib_sources "csrc/tstringlist.cpp")
list(APPEND luataglib_sources "csrc/tvariant.cpp")
list(APPEND luataglib_sources "csrc/tversionnumber.cpp")
list(APPEND luataglib_sources "csrc/ape/ape.cpp")
list(APPEND luataglib_sources "csrc/ape/apefile.cpp")
list(APPEND luataglib_sources "csrc/ape/apefooter.cpp")
list(APPEND luataglib_sources "csrc/ape/apeitem.cpp")
list(APPEND luataglib_sources "csrc/ape/apeproperties.cpp")
list(APPEND luataglib_sources "csrc/ape/apetag.cpp")
list(APPEND luataglib_sources "csrc/asf/asf.cpp")
list(APPEND luataglib_sources "csrc/asf/asfattribute.cpp")
list(APPEND luataglib_sources "csrc/asf/asffile.cpp")
list(APPEND luataglib_sources "csrc/asf/asfpicture.cpp")
list(APPEND luataglib_sources "csrc/asf/asfproperties.cpp")
list(APPEND luataglib_sources "csrc/asf/asftag.cpp")
list(APPEND luataglib_sources "csrc/dsdiff/dsdiff.cpp")
list(APPEND luataglib_sources "csrc/dsdiff/dsdifffile.cpp")
list(APPEND luataglib_sources "csrc/dsdiff/dsdiffproperties.cpp")
list(APPEND luataglib_sources "csrc/dsdiff/diin/dsdiffdiin.cpp")
list(APPEND luataglib_sources "csrc/dsdiff/diin/dsdiffdiintag.cpp")
list(APPEND luataglib_sources "csrc/dsf/dsf.cpp")
list(APPEND luataglib_sources "csrc/dsf/dsffile.cpp")
list(APPEND luataglib_sources "csrc/dsf/dsfproperties.cpp")
list(APPEND luataglib_sources "csrc/flac/flac.cpp")
list(APPEND luataglib_sources "csrc/flac/flacfile.cpp")
list(APPEND luataglib_sources "csrc/flac/flacmetadatablock.cpp")
list(APPEND luataglib_sources "csrc/flac/flacpicture.cpp")
list(APPEND luataglib_sources "csrc/flac/flacproperties.cpp")
list(APPEND luataglib_sources "csrc/id3v1/id3v1.cpp")
list(APPEND luataglib_sources "csrc/id3v1/id3v1tag.cpp")
list(APPEND luataglib_sources "csrc/id3v2/attachedpictureframe.cpp")
list(APPEND luataglib_sources "csrc/id3v2/chapterframe.cpp")
list(APPEND luataglib_sources "csrc/id3v2/commentsframe.cpp")
list(APPEND luataglib_sources "csrc/id3v2/eventtimingcodesframe.cpp")
list(APPEND luataglib_sources "csrc/id3v2/generalencapsulatedobjectframe.cpp")
list(APPEND luataglib_sources "csrc/id3v2/id3v2.cpp")
list(APPEND luataglib_sources "csrc/id3v2/id3v2extendedheader.cpp")
list(APPEND luataglib_sources "csrc/id3v2/id3v2footer.cpp")
list(APPEND luataglib_sources "csrc/id3v2/id3v2header.cpp")
list(APPEND luataglib_sources "csrc/id3v2/id3v2tag.cpp")
list(APPEND luataglib_sources "csrc/id3v2/id3v2frame.cpp")
list(APPEND luataglib_sources "csrc/id3v2/ownershipframe.cpp")
list(APPEND luataglib_sources "csrc/id3v2/podcastframe.cpp")
list(APPEND luataglib_sources "csrc/id3v2/popularimeterframe.cpp")
list(APPEND luataglib_sources "csrc/id3v2/privateframe.cpp")
list(APPEND luataglib_sources "csrc/id3v2/relativevolumeframe.cpp")
list(APPEND luataglib_sources "csrc/id3v2/synchronizedlyricsframe.cpp")
list(APPEND luataglib_sources "csrc/id3v2/textidentificationframe.cpp")
list(APPEND luataglib_sources "csrc/id3v2/tableofcontentsframe.cpp")
list(APPEND luataglib_sources "csrc/id3v2/uniquefileidentifierframe.cpp")
list(APPEND luataglib_sources "csrc/id3v2/unknownframe.cpp")
list(APPEND luataglib_sources "csrc/id3v2/unsynchronizedlyricsframe.cpp")
list(APPEND luataglib_sources "csrc/id3v2/urllinkframe.cpp")
list(APPEND luataglib_sources "csrc/it/it.cpp")
list(APPEND luataglib_sources "csrc/it/itfile.cpp")
list(APPEND luataglib_sources "csrc/it/itproperties.cpp")
list(APPEND luataglib_sources "csrc/mp4/mp4.cpp")
list(APPEND luataglib_sources "csrc/mp4/mp4coverart.cpp")
list(APPEND luataglib_sources "csrc/mp4/mp4file.cpp")
list(APPEND luataglib_sources "csrc/mp4/mp4item.cpp")
list(APPEND luataglib_sources "csrc/mp4/mp4properties.cpp")
list(APPEND luataglib_sources "csrc/mp4/mp4tag.cpp")
list(APPEND luataglib_sources "csrc/mod/mod.cpp")
list(APPEND luataglib_sources "csrc/mod/modfile.cpp")
list(APPEND luataglib_sources "csrc/mod/modfilebase.cpp")
list(APPEND luataglib_sources "csrc/mod/modproperties.cpp")
list(APPEND luataglib_sources "csrc/mod/modtag.cpp")
list(APPEND luataglib_sources "csrc/mpc/mpc.cpp")
list(APPEND luataglib_sources "csrc/mpc/mpcfile.cpp")
list(APPEND luataglib_sources "csrc/mpc/mpcproperties.cpp")
list(APPEND luataglib_sources "csrc/mpeg/mpeg.cpp")
list(APPEND luataglib_sources "csrc/mpeg/mpegfile.cpp")
list(APPEND luataglib_sources "csrc/mpeg/mpegheader.cpp")
list(APPEND luataglib_sources "csrc/mpeg/mpegproperties.cpp")
list(APPEND luataglib_sources "csrc/mpeg/xingheader.cpp")
list(APPEND luataglib_sources "csrc/ogg/flac/oggflac.cpp")
list(APPEND luataglib_sources "csrc/ogg/flac/oggflacfile.cpp")
list(APPEND luataglib_sources "csrc/ogg/ogg.cpp")
list(APPEND luataglib_sources "csrc/ogg/oggfile.cpp")
list(APPEND luataglib_sources "csrc/ogg/oggpage.cpp")
list(APPEND luataglib_sources "csrc/ogg/oggpageheader.cpp")
list(APPEND luataglib_sources "csrc/ogg/xiphcomment.cpp")
list(APPEND luataglib_sources "csrc/ogg/opus/opus.cpp")
list(APPEND luataglib_sources "csrc/ogg/opus/opusfile.cpp")
list(APPEND luataglib_sources "csrc/ogg/opus/opusproperties.cpp")
list(APPEND luataglib_sources "csrc/ogg/speex/speex.cpp")
list(APPEND luataglib_sources "csrc/ogg/speex/speexfile.cpp")
list(APPEND luataglib_sources "csrc/ogg/speex/speexproperties.cpp")
list(APPEND luataglib_sources "csrc/ogg/vorbis/vorbis.cpp")
list(APPEND luataglib_sources "csrc/ogg/vorbis/vorbisfile.cpp")
list(APPEND luataglib_sources "csrc/ogg/vorbis/vorbisproperties.cpp")
list(APPEND luataglib_sources "csrc/riff/riff.cpp")
list(APPEND luataglib_sources "csrc/riff/aiff/aiff.cpp")
list(APPEND luataglib_sources "csrc/riff/aiff/aifffile.cpp")
list(APPEND luataglib_sources "csrc/riff/aiff/aiffproperties.cpp")
list(APPEND luataglib_sources "csrc/riff/info/info.cpp")
list(APPEND luataglib_sources "csrc/riff/info/infotag.cpp")
list(APPEND luataglib_sources "csrc/riff/wav/wav.cpp")
list(APPEND luataglib_sources "csrc/riff/wav/wavfile.cpp")
list(APPEND luataglib_sources "csrc/riff/wav/wavproperties.cpp")
list(APPEND luataglib_sources "csrc/s3m/s3m.cpp")
list(APPEND luataglib_sources "csrc/s3m/s3mfile.cpp")
list(APPEND luataglib_sources "csrc/s3m/s3mproperties.cpp")
list(APPEND luataglib_sources "csrc/trueaudio/trueaudio.cpp")
list(APPEND luataglib_sources "csrc/trueaudio/trueaudiofile.cpp")
list(APPEND luataglib_sources "csrc/trueaudio/trueaudioproperties.cpp")
list(APPEND luataglib_sources "csrc/vorbis/vorbis.cpp")
list(APPEND luataglib_sources "csrc/wavpack/wavpack.cpp")
list(APPEND luataglib_sources "csrc/wavpack/wavpackfile.cpp")
list(APPEND luataglib_sources "csrc/wavpack/wavpackproperties.cpp")
list(APPEND luataglib_sources "csrc/xm/xm.cpp")
list(APPEND luataglib_sources "csrc/xm/xmfile.cpp")
list(APPEND luataglib_sources "csrc/xm/xmproperties.cpp")

add_library(LuaTagLib MODULE ${luataglib_sources})
if(WIN32)
    target_link_libraries(LuaTagLib PRIVATE ${LUA_LIBRARIES})
endif()

target_include_directories(LuaTagLib PRIVATE ${LUA_INCLUDE_DIR})

target_link_libraries(LuaTagLib PRIVATE TagLib::TagLib)

if(TAGLIB_VERSION VERSION_GREATER_EQUAL 2.0.0)
    set_property(TARGET LuaTagLib PROPERTY CXX_STANDARD 17)
else()
    set_property(TARGET LuaTagLib PROPERTY CXX_STANDARD 11)
endif()

# TODO - on apple systems, does using module automatically add "-undefined dynamic_lookup"?
#if(APPLE)
#    set(CMAKE_SHARED_LIBRARY_CREATE_C_FLAGS "${CMAKE_SHARED_LIBRARY_CREATE_C_FLAGS} -undefined dynamic_lookup")
#    if(BUILD_SHARED_LIBS)
#        set_target_properties(LuaTagLib PROPERTIES SUFFIX ".so")
#    endif()
#endif()

set_target_properties(LuaTagLib PROPERTIES PREFIX "" OUTPUT_NAME "TagLib" POSITION_INDEPENDENT_CODE ON CXX_STANDARD_REQUIRED ON CXX_EXTENSIONS OFF)
set_target_properties(LuaTagLib PROPERTIES C_VISIBILITY_PRESET hidden CXX_VISIBILITY_PRESET hidden)

if(LTO_SUPPORTED)
    set_property(TARGET LuaTagLib PROPERTY INTERPROCEDURAL_OPTIMIZATION TRUE)
endif()

if(CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
    target_compile_options(LuaTagLib PRIVATE "-Wall")
    target_compile_options(LuaTagLib PRIVATE "-Wextra")
    target_compile_options(LuaTagLib PRIVATE "-Wcast-align")
endif()

if(CMAKE_C_COMPILER_ID STREQUAL "GNU")
    target_compile_options(LuaTagLib PRIVATE "-Wall")
    target_compile_options(LuaTagLib PRIVATE "-Wextra")
endif()

install(TARGETS LuaTagLib
  LIBRARY DESTINATION "${CMODULE_INSTALL_DIR}"
  RUNTIME DESTINATION "${CMODULE_INSTALL_DIR}"
  ARCHIVE DESTINATION "${CMODULE_INSTALL_DIR}"
)

